Bug 1067 - IOUtil.testDirExec(File) needs to preserve SPACE in exetst.getCanonicalPath() command
Having a test-executable file with SPACE in it's temporary path,
e.g.
  Unix:       /magic temp/user/
  Windows XP: C:\Documents and Settings\user\temp

results to split up commands if using
'Process.exec(String)', since it utilizes
a StringTokenizer to assemble the command String[].

This patch uses 'Process.exec(String[])' avoiding
splitting up SPACE in the full command string/path.

Major impact is on 'Windows XP',
where a SPACE separated TEMP/TMP folder is the default.

Note-1: Commit 9bc3d3f78bb2fb1aa0ccfb02ffb5bdda74420cac
introduced testing executable permission on Windows (Bug 1015)
and rendered this issue visible.

To reproduce the issue on Windows:
+++
set TEMP=C:\Documents and Settings\jogamp\temp
set TMP=C:\Documents and Settings\jogamp\temp
"C:\Program Files (x86)\Mozilla Firefox\firefox.exe"
+++

Note-2: This bug affects all platforms!